// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Swatch > Render > renders OKLCH background when gamut is p3 1`] = `
<button
  class="relative flex-1 min-w-9 @xl:h-22 flex flex-row @xl:flex-col items-center justify-between @xl:justify-end gap-2 px-2 py-4 rounded-md text-center cursor-pointer bg-(--gamut-bg-oklch) gamut-srgb:bg-(--gamut-bg-hex)"
  style="--gamut-bg-oklch: oklch(63.27% 0.254 19.9); --gamut-bg-hex: #ff0044; color: rgb(255, 255, 255);"
  type="button"
>
  <span
    class="text-base/4 @xl:order-2"
  >
    500
  </span>
</button>
`;

exports[`Swatch > Render > renders hex background when gamut is srgb 1`] = `
<button
  class="relative flex-1 min-w-9 @xl:h-22 flex flex-row @xl:flex-col items-center justify-between @xl:justify-end gap-2 px-2 py-4 rounded-md text-center cursor-pointer bg-(--gamut-bg-oklch) gamut-srgb:bg-(--gamut-bg-hex)"
  style="--gamut-bg-oklch: oklch(63.27% 0.254 19.9); --gamut-bg-hex: #ff0044; color: rgb(255, 255, 255);"
  type="button"
>
  <span
    class="text-base/4 @xl:order-2"
  >
    500
  </span>
</button>
`;

exports[`Swatch > Render > renders with lock icon and step className 1`] = `
<button
  class="relative flex-1 min-w-9 @xl:h-22 flex flex-row @xl:flex-col items-center justify-between @xl:justify-end gap-2 px-2 py-4 rounded-md text-center cursor-pointer bg-(--gamut-bg-oklch) gamut-srgb:bg-(--gamut-bg-hex)"
  style="--gamut-bg-oklch: oklch(63.27% 0.254 19.9); --gamut-bg-hex: #ff0044; color: rgb(255, 255, 255);"
  type="button"
>
  <span
    class="@xl:order-2 text-sm/4"
  >
    500
  </span>
  <span
    class="mb-auto @xl:mt-2 @xl:order-1"
  >
    <svg
      class="text-base"
      fill="currentColor"
      height="1em"
      viewBox="0 0 256 256"
      width="1em"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M208,76H180V56A52,52,0,0,0,76,56V76H48A20,20,0,0,0,28,96V208a20,20,0,0,0,20,20H208a20,20,0,0,0,20-20V96A20,20,0,0,0,208,76ZM100,56a28,28,0,0,1,56,0V76H100ZM204,204H52V100H204Z"
      />
    </svg>
  </span>
</button>
`;
